--- a/MovieWebApplication/bin/MovieWebApplication.dll.config
+++ b/MovieWebApplication/bin/MovieWebApplication.dll.config
@@ -25,6 +25,9 @@
         <add namespace="System.Web.WebPages"/>
       </namespaces>     
     </pages>
+  <customErrors mode="On" defaultRedirect="Error">
+    <error statusCode="404" redirect="~/Error/NotFound"/>  
+  </customErrors> 
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
