--- a/MovieWebApplication/Web.config
+++ b/MovieWebApplication/Web.config
@@ -11,6 +11,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key ="Token" value="sjd1HfkjU83ksdsm3802k"/>
+    <add key ="ApiBaseUrl" value="http://webjetapitest.azurewebsites.net"/>
+    <add key ="CinemaUrl" value="/api/cinemaworld/movies"/>
+    <add key ="FilmUrl" value="/api/filmworld/movies"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
