--- a/MovieWebApplication/Web.config
+++ b/MovieWebApplication/Web.config
@@ -10,7 +10,8 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key ="Token" value="sjd1HfkjU83ksdsm3802k"/>
+    <!--Please add proper x-access-token here-->
+    <add key ="Token" value=""/>
     <add key ="ApiBaseUrl" value="http://webjetapitest.azurewebsites.net"/>
     <add key ="CinemaUrl" value="/api/cinemaworld/movies"/>
     <add key ="FilmUrl" value="/api/filmworld/movies"/>
